--- a/bootloader_ota(B)/Objects/project.build_log.htm
+++ b/bootloader_ota(B)/Objects/project.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-C:\Users\86183\Downloads\bootloader_ota(B) - 副本\bootloader_ota(B) - 副本\bootloader_ota(B)\project.uvprojx
+C:\Users\86183\Desktop\STM32_BootLoader_OTA\bootloader_ota(B)\project.uvprojx
 Project File Date:  07/07/2025
 
 <h2>Output:</h2>
@@ -29,8 +29,8 @@ Project File Date:  07/07/2025
 Build target 'Target 1'
 compiling bootloader.c...
 linking...
-Program Size: Code=16516 RO-data=940 RW-data=68 ZI-data=3252  
-After Build - User command #1: fromelf --bin -o "C:\Users\86183\Downloads\bootloader_ota(B) - 副本\bootloader_ota(B) - 副本\bootloader_ota(B)\Objects\project.bin" "C:\Users\86183\Downloads\bootloader_ota(B) - 副本\bootloader_ota(B) - 副本\bootloader_ota(B)\Objects\project.axf
+Program Size: Code=17500 RO-data=1024 RW-data=68 ZI-data=3252  
+After Build - User command #1: fromelf --bin -o "C:\Users\86183\Desktop\STM32_BootLoader_OTA\bootloader_ota(B)\Objects\project.bin" "C:\Users\86183\Desktop\STM32_BootLoader_OTA\bootloader_ota(B)\Objects\project.axf
 ".\Objects\project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
