--- a/bootloader_ota(B)/Objects/project.build_log.htm
+++ b/bootloader_ota(B)/Objects/project.build_log.htm
@@ -21,22 +21,27 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.42.0.0
  
 <h2>Project:</h2>
-C:\Users\S10928\Desktop\bootloader_ota(B)\project.uvprojx
+D:\gitlab\STM32_BootLoader_OTA\bootloader_ota(B)\project.uvprojx
 Project File Date:  07/09/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling flash.c...
 compiling at24c256.c...
-Hardware\at24c256.c(208): warning:  #223-D: function "usart3_printf" declared implicitly
-      usart3_printf("Read OTA version: %s\r\n", ota_info_struct.version); // 调试打印
-Hardware\at24c256.c(223): warning:  #223-D: function "usart3_printf" declared implicitly
-      usart3_printf("Writing OTA info to EEPROM (size: %d)\r\n", OTA_INFO_DATA_SIZE);
-Hardware\at24c256.c: 2 warnings, 0 errors
+compiling at24c02.c...
+compiling i2c.c...
+compiling main.c...
+compiling delay.c...
+compiling key.c...
+compiling usart.c...
+compiling timer.c...
+compiling sys.c...
+compiling bootloader.c...
 linking...
-Program Size: Code=17788 RO-data=1024 RW-data=68 ZI-data=3252  
-After Build - User command #1: fromelf --bin -o "C:\Users\S10928\Desktop\bootloader_ota(B)\Objects\project.bin" "C:\Users\S10928\Desktop\bootloader_ota(B)\Objects\project.axf
-".\Objects\project.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=17832 RO-data=1024 RW-data=68 ZI-data=3252  
+After Build - User command #1: fromelf --bin -o "D:\gitlab\STM32_BootLoader_OTA\bootloader_ota(B)\Objects\project.bin" "D:\gitlab\STM32_BootLoader_OTA\bootloader_ota(B)\Objects\project.axf
+".\Objects\project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +55,7 @@ Package Vendor: Keil
   D:\Keil\ARM\PACK\Keil\STM32F1xx_DFP\2.4.1\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
