--- a/bootloader_ota(B)/Objects/project.build_log.htm
+++ b/bootloader_ota(B)/Objects/project.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  07/10/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
+compiling bootloader.c...
 linking...
-Program Size: Code=18500 RO-data=1068 RW-data=72 ZI-data=3760  
+Program Size: Code=18780 RO-data=908 RW-data=72 ZI-data=3760  
 After Build - User command #1: fromelf --bin -o "C:\Users\S10928\Desktop\bootloader_ota(B)\Objects\project.bin" "C:\Users\S10928\Desktop\bootloader_ota(B)\Objects\project.axf
 ".\Objects\project.axf" - 0 Error(s), 0 Warning(s).
 
